# scriptwatch

./: .gitmodules  CMakeLists.txt  README.md  copy_to_ida.sh  ida-plugin.json
src/: plugin.cpp  utils.hpp  utils.mm
